# benchforge

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
adapters/agents/: claude-code.yaml  codex-cli.yaml  github-copilot-cli-byok-ollama.yaml
adapters/cloud/: gemini.yaml  openai.yaml
app-scaffold/: index.html  package-lock.json  package.json
app-scaffold/src-tauri/: Cargo.toml
app-scaffold/src-tauri/src/: commands.rs  harness_tools.rs  huggingface.rs  jobs.rs  main.rs  paths.rs  runner.rs  runtime_tools.rs  store.rs
benchforge-blueprint/: .env.example  .gitignore  AGENTS.md  README.md
benchforge-blueprint/workers/: benchforge-worker  pyproject.toml
benchforge-blueprint/workers/benchforge_worker/: aider_runner.py  evalplus_runner.py  scoring.py
benchforge-blueprint/workers/tests/: test_harness_runner.py
docker/: compose.yaml
docs/: ADAPTERS.md  CODEX_DESKTOP_RUNBOOK.md  IMPLEMENTATION_BACKLOG.md  REFERENCES.md  ROADMAP.md  SECURITY_SANDBOX.md
prompts/: 00_BUILD_FROM_BLUEPRINT.md  06_CLI_AGENTS.md  09_SECURITY_HARDENING.md
scripts/: benchmark-readiness.sh  dependency-audit.sh  doctor.sh  generate-app-icon.py  generate-placeholder-icon.py  package-dmg-macos.sh  product-readiness.sh  release-preflight.sh  release-signing-preflight-macos.sh  verify-dmg-install-smoke-macos.sh  verify-macos-distribution.sh
(+171 files in other folders)
