[package]
name = "benchforge"
version = "0.1.0"
edition = "2021"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
regex = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
strip = false
