[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "benchforge-worker"
version = "0.1.0"
description = "Python worker bridge for BenchForge benchmark harnesses"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.22",
  "PyYAML>=6.0"
]

[project.scripts]
benchforge-worker = "benchforge_worker.cli:main"
